--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "dateformat": "^5.0.3",
     "formik": "^2.2.9",
     "next": "latest",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "@types/react-datepicker": "^4.4.1",
+    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
