--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "dateformat": "^5.0.3",
     "formik": "^2.2.9",
@@ -22,6 +23,7 @@
     "@types/react": "17.0.38",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-redux": "^7.1.24",
+    "@types/tailwindcss": "^3.0.10",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
